--- a/src/Components/style/table.css
+++ b/src/Components/style/table.css
@@ -1,25 +1,39 @@
 .wrapper {
+    font-family: Inter, sans-serif;
     display: flex;
     justify-content: center;
+
 }
 
 .table {
-    font-family: Inter, sans-serif;
     width: 60%;
+}
+
+.ant-table-cell {
+    text-align: center;
+
 }
 
 .ant-table-row :nth-child(2) {
     width: 500px;
     text-align: left;
+    width: 50%;
 }
 
-.ant-table-cell {
+.ant-table-thead>tr>th {
     text-align: center;
+
+}
+
+span {
+    font-family: Inter, sans-serif;
+    font-weight: 600;
+
 }
 
 .expandableRow {
     display: flex;
-    align-items: center
+    align-items: center;
 }
 
 .productImg {
@@ -30,6 +44,13 @@
     margin: 0;
     padding: 20px;
     text-align: justify;
+}
+
+.wrapperMobileDetails {
+
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
 }
 
 .spinner {
@@ -60,7 +81,11 @@
         padding: 2px;
     }
 
-    :where(.css-dev-only-do-not-override-12jzuas).ant-table-wrapper .ant-table-thead>tr>th {
+    .ant-table-wrapper .ant-table-tbody>tr>td {
+        padding: 16px 5px;
+    }
+
+    .ant-table-wrapper .ant-table-thead>tr>th {
         padding: 5px;
     }
 }
