--- a/src/Components/style/table.css
+++ b/src/Components/style/table.css
@@ -2,7 +2,6 @@
     font-family: Inter, sans-serif;
     display: flex;
     justify-content: center;
-
 }
 
 .table {
@@ -11,7 +10,6 @@
 
 .ant-table-cell {
     text-align: center;
-
 }
 
 .ant-table-row :nth-child(2) {
@@ -22,14 +20,22 @@
 
 .ant-table-thead>tr>th {
     text-align: center;
-
 }
 
 span {
     font-family: Inter, sans-serif;
     font-weight: 600;
-
 }
+
+.ant-table-cell-row-hover {
+    background-color: #e4effa !important;
+}
+
+
+.ant-table-expanded-row-level-1 {
+    background-color: #168aff18;
+}
+
 
 .expandableRow {
     display: flex;
@@ -56,7 +62,6 @@ span {
 .spinner {
     padding: 50px;
     border-radius: 4px;
-
 }
 
 @media (max-width: 760px) {
